// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimStatus renders for Scenario1 1`] = `
<div
  className="claim-status"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status"
  >
    <span
      className="text-line"
    >
      Pending Eligibility - Phone Interview Will Be Scheduled
    </span>
  </div>
  <div
    className="summary"
  >
    We identified an issue that could make you ineligible for benefits. We need to confirm your eligibility in a phone interview.
  </div>
  <div
    className="status-box"
  >
    <div
      className="topbar"
    >
      <h3
        className="next-steps"
      >
        Next Steps
      </h3>
    </div>
    <div
      className="explanation"
    >
      <div
        className="next-steps"
      >
        <ul>
          <li
            className="next-step"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </li>
          <li
            className="next-step"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClaimStatus renders for Scenario4 1`] = `
<div
  className="claim-status"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status"
  >
    <span
      className="text-line"
    >
      Review Required
    </span>
  </div>
  <div
    className="summary"
  >
    We identified an issue and may need to determine your eligibility or verify your information.
  </div>
  <div
    className="status-box"
  >
    <div
      className="topbar"
    >
      <h3
        className="next-steps"
      >
        Next Steps
      </h3>
    </div>
    <div
      className="explanation"
    >
      <div
        className="next-steps"
      >
        <ul>
          <li
            className="next-step"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </li>
          <li
            className="next-step"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClaimStatus renders for Scenario5 1`] = `
<div
  className="claim-status"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status"
  >
    <span
      className="text-line"
    >
      No Weeks Available to Certify
    </span>
  </div>
  <div
    className="summary"
  >
    You currently have no weeks available to certify for benefits.
  </div>
  <div
    className="status-box"
  >
    <div
      className="topbar"
    >
      <h3
        className="next-steps"
      >
        Next Steps
      </h3>
    </div>
    <div
      className="explanation"
    >
      <div
        className="next-steps"
      >
        <ul>
          <li
            className="next-step"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </li>
          <li
            className="next-step"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClaimStatus renders for Scenario6 1`] = `
<div
  className="claim-status"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status"
  >
    <span
      className="text-line"
    >
      Weeks Available to Certify
    </span>
  </div>
  <div
    className="summary"
  >
    You have weeks available to 
    <a
      href="https://edd.ca.gov/Unemployment/certify.htm"
    >
      certify for benefits
    </a>
    .
  </div>
  <div
    className="status-box"
  >
    <div
      className="topbar"
    >
      <h3
        className="next-steps"
      >
        Next Steps
      </h3>
    </div>
    <div
      className="explanation"
    >
      <div
        className="next-steps"
      >
        <ul>
          <li
            className="next-step"
          >
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </li>
          <li
            className="next-step"
          >
            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
